--- a/4-index.html
+++ b/4-index.html
@@ -10,6 +10,10 @@
     <body>
     <div class="header_img">
         <header>
+            <input class="menu-btn" type="checkbox" id="menu-btn" name="menu-btn" />
+            <label class="menu-icon" for="menu-btn">
+                <span class="navicon"></span>
+            </label>
             <div class="div_logo_button">
                 <img src="./images/logo_headphones.png" alt="">
             </div>
