--- a/2-index.html
+++ b/2-index.html
@@ -3,21 +3,25 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
-        <link rel="stylesheet" type="text/css" href="1-styles.css" />
+        <link rel="stylesheet" type="text/css" href="4-styles.css" />
         <link rel="stylesheet" href="">
         <title>Headphones</title>
     </head>
     <body>
     <div class="header_img">
         <header>
+            <input class="menu-btn" type="checkbox" id="menu-btn" name="menu-btn" />
+            <label class="menu-icon" for="menu-btn">
+                <span class="navicon"></span>
+            </label>
             <div class="div_logo_button">
                 <img src="./images/logo_headphones.png" alt="">
             </div>
             <div class="navbar">
                 <ul>
-                    <li>what we do</li>
-                    <li>our results</li>
-                    <li>contact us</li>
+                    <li><a href="#what_we_do" style="text-decoration:none">what we do</a></li>
+                    <li><a href="#part_pentagon" style="text-decoration:none">our results</a></li>
+                    <li><a href="#contact_us" style="text-decoration:none">contact us</a></li>
                 </ul>
             </div>
         </header>
@@ -31,7 +35,7 @@
                 </div>
             </div>
         </div>
-            <section class="what_we_do">
+            <section class="what_we_do" id="what_we_do">
                 <div class="text_what_we_do">
                     <h1>What we do…</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -59,7 +63,7 @@
                     </div>
                 </div>
             </section>
-            <section class="part_pentagon">
+            <section class="part_pentagon" id="part_pentagon">
                 <div class="text_pentagon">
                     <h1>Our results speak for themselves</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -95,6 +99,41 @@
                     </div>
                 </div>
             </section>
+            <section class="part_contact_us" id="contact_us">
+                <div class="contact_us">
+                    <h1>Contact us</h1>
+                    <form action="" method="post">
+                        <ul>
+                          <li>
+                            <label for="name">Nom</label>
+                            <input type="text" id="name" name="user_name" />
+                          </li>
+                          <li>
+                            <label for="mail">E-mail</label>
+                            <input type="email" id="mail" name="user_mail"/>
+                          </li>
+                          <li>
+                            <label for="msg">Message</label>
+                            <input type="text" id="msg" name="user_message"/>
+                          </li>
+                        </ul>
+                      </form>                                           
+                    <button>CALL TO ACTION</button>
+                </div>
+            </section>
         </main>
+        <footer>
+            <div>
+                <div class="footer_div">
+                    <img src="./images/logo_headphones.png" alt="">
+                    <div class="footer_social">
+                        <img src="./images/Facebook_White.png" alt="">
+                        <img src="./images/Twitter_White.png" alt="">
+                        <img src="./images/Instagram_White.png" alt="">
+                    </div>
+                </div>
+                <p>©headphones 2020</p>
+            </div>
+        </footer>
     </body>
 </html>
